#Version 0.4.4.5
Big rewrite of most js-files, including CD10Dice.js.
Massive CSS update. Foundry is now styled beyond CD10-specific sheets.
Template updates. Weapons no longer have a block/parry value. Shields no longer have protection.
Blocking mechanics simplified to current CD10 system (half lethality).
Roll mechanics updated. 9's now provide a +4 on the check. Still explode.
Roll evaluation updated. Now properly rolls a 0-9 D10 and handles 0's and 9's properly.
Roll presentation updated. 9's and 0's are now presented in chat.
Migration script for removing old template-data from actors added.

Both Mooksheets and Charactersheets now extend a BaseSheet class to simplify code and make maintenance less of a pain.

#Version 0.4.4
== Bugfixes ==
Fixed bug in trait selection on the sheet. You couldn't unselect them. Now you can.

#Version 0.4.3
Fixed a mismatch in the initiative roll. It would erroneously grab the actor, not the token, leading to a mismatch of items, skills and modifiers and sometimes failing entirely.

#Version 0.4.2
Stable release.

#Version 0.4.1
Removed erroneously placed roll function in the itemEquip function on the named character sheet.

#Version 0.4.0
This is a platform release. This is the version this system will stay on until the CD10 redesign is done. We
will release bugfixes as necessary to this version, but expect a massive change when v0.5.0 is released, which
will include the redesign changes.

== Major changes ==
- Removed Hitlocation
- Removed Encumbrance
- Removed complex checks button and dialog.
- Implemented faster way for trait (complex) checks. Left click on the trait's checkbox to select trait for skill check. 
    Right click to reverse the trait. This also works for attacks.
- Cleaned up unimplemented mechanics, simplified code.
- Remove shield check and defaulting to base combat skills instead of trying to work with "+shield" skills.