@@ -1,12 +1,12 @@
 # Celenia D10 RPG System
-CD10 RPG is a narratively focused, settings-agnostic RPG systems meant primarily for immersive verisimilitude games with a touch of rule of cool. CD10 attempts to emulate the feel of an 80's action movie, where the main character is just a human, but also the hero of the story. Imagine your character being John McClane of Die Hard and you get pretty close to the aim of the system. It is not suitable for epic, grand-scale, "save the universe" plots common to more traditional high-fantasy games, although with some fenagling, those campaigns are possible. But just don't try to make big, epic boss battles in this system. It's not made for it. It's designed primarily for equal-footing fighters duking it out, or fighting monsters that are of somewhat similar ability as the characters.
+CD10 RPG is a narratively leaning, settings-agnostic RPG systems meant primarily for immersive verisimilitude games with a touch of rule of cool. CD10 attempts to emulate the feel of an 80's action movie, where the main character is just a human, but also the hero of the story. Imagine your character being John McClane of Die Hard and you get pretty close to the aim of the system. It is not suitable for epic, grand-scale, "save the universe" plots common to more traditional high-fantasy games, although with some fenagling, those campaigns are possible. But just don't try to make big, epic boss battles in this system. It's not made for it. It's designed primarily for equal-footing fighters duking it out, or fighting monsters that are of somewhat similar ability to the characters.
 
 # Core Features
 # No base attributes
 CD10 offers a character no base attributes (such as Strength, Charisma, Intelligence etc). Instead, the system uses a combination of trainable skills and acquired traits. The skills are where you will find most base attribute-esque things such as athleticism and socialisation, while traits describe everything from the character's physical presence, appearance to their loyalty and societal status. Traits are incredibly flexible and all play into the game, so your character's conviction, personality, fate and quirks all play a mechanical role in the game.
 
 # No hitpoints
-CD10 eschews the traditional hit points in favor of a more fluid and vague system. Hitpoints are easy to work with and easy to understand, but provide too much of a game-feeling and hinders immersion. CD10 instead relies on Wounds and Shock to describe how injured a character is. Wounds are accumulated based on physical saves and inflict rising, long-term debilitation on a character. Barely any at first, but keep getting wounded and things stack up fast. Shock is the short-term companion of Wounds and handle things like shock, fatigue, pain and stress. Shock is generally fast to accrue, fast to recover, while Wounds are slower both to gain and to recover.
+CD10 eschews the traditional hit points in favor of a more fluid and vague system. CD10 instead relies on Wounds to describe how injured a character is. Wounds are accumulated based on physical saves and inflict rising, long-term debilitation on a character. Barely any at first, but keep getting wounded and things stack up fast. Wounds are generally slow to recover, so avoiding injury is paramount to a healthy adventurer.
 
 # High-stakes
 In CD10, a character is as likely to die in their first session as in their 100th. Over time, a character gains no resistance to injury, although they can definitely improve their skills as a fighter. Defense is largely in the hands of the character, directly using your combat skills to prevent damage through dodging, parrying or blocking. There is no static AC number. Your skills determine how good you are both at hitting and avoiding getting hit. Equipment plays a large role as well.
@@ -19,14 +19,14 @@ In CD10, your character does not gain levels as they improve. They accrue experi
 The entire system is based around this horizontal progression, where a character becomes more skilled at what they're good at, but also become more generally skilled in a range of abilities and skills, rather than gaining more powerful abilities to replace their old.
 
 # In development
-CD10 RPG is currently in development and CD10 Core, the free portion, is considered to be in an alpha state. Things are likely to change as the system develops. It is fully useable for gameplay, but because it is still going through gameplay tests, core mechanics can change. Hence the Alpha status. Otherwise, it would be considered Beta.
+CD10 RPG is currently in development and has reached Beta state. As most core mechanics are locked down, numbers are being tweaked and not a lot is going to change ahead.
 
-The system does not come with any content packs (such as items, skills, traits etc) at present. Because of the alpha-state of the system outside of Foundry, there's still too much in fluctuation to nail down any content packs.
+The system does not come with any content packs (such as items, skills, traits etc) at present. Content packs are slated to be produced once the system hits a stable release that matches all mechanics of the real-life system.
 
 If you intend to run this system, either wait until it hits 1.0 and the content packs will be developed, or create your own using the provided sheets. Lists and descriptions of skills, traits etc is available in the SRD.
 
 # System SRD
-The CD10 Core system reference is available, for free, at Worldanvil (https://www.worldanvil.com/w/CD10). Supporters also get access to the full alpha test of CD10 Advanced, which includes many advanced modules.
+The CD10 Core system reference is available, for free, at Worldanvil (https://www.worldanvil.com/w/CD10). Supporters also get access to playtest material, sneak-peeks of new features, as well as participate in development discussions.
 
 If you want to help support the development of this system, both in and outside of Foundry, please visit Ko-Fi (https://ko-fi.com/beyondreality) and buy us a coffee! If you want, you can also support us monthly for something nice in return!
 
@@ -42,7 +42,7 @@ To create skills, traits and items on a character, simply create items in the ga
 Weapons and armor can be equipped from the inventory tab by clicking the "+" symbol, and unequipped by clicking the "-" symbol. You can also equip and unequip using the right-click context menu.
 
 # Injuries
-Wounds and shock is added by left-clicking on respective bar. Right clicking removes a pip. Debilitation is automatically calculated and displayed.
+Wounds are manipulated by clicking on respective bar. Left click adds a pip, right click removes a pip. Debilitation is automatically calculated and displayed. You can also use single left clicks on the + and minus signs next to the wounds-tracker.
 
 # Skill checks
 Single-click on the roll-icon (a D10 that shows up on Skill mouse-over) will perform a skill check with that skill, taking into account any debilitation, and post the results as a default roll message in chat. (Spells not yet included, coming in future release)
@@ -53,6 +53,4 @@ Shift-click on the roll icon performs a hero-point boosted skill check in the sa
 Left click the trait's checkbox to involve the trait in the coming skill check. Right click it to reverse the trait.
 
 # Note to Keepers
-CD10 is a Theatre of the Mind game, designed to be played without battle maps. In the future, more support for tokens and combat mechanics will be implemented into Foundry, but at the moment, there is no combat tracker and no targeting mechanic for automatic attack/defense rolls.
-
-Handle each roll separately for now. This is likely to remain so in the future as well, due to the flexibility of CD10, allowing players (and NPCs!) to apply Hero Points to their checks at will.
+CD10 is a Theatre of the Mind game, designed to be played without battle maps. In the future, more support for tokens and combat mechanics will be implemented into Foundry, but at the moment, the combat tracker and basic initiative is implemented, but there is no targeting mechanic for automatic attack/defense rolls.
