@@ -227,6 +227,8 @@ export default class CD10BaseSheet extends ActorSheet {
       html.find(".inline-edit").change(this._onSkillEdit.bind(this));
       html.find(".ammo-select").click(this._onAmmoSelect.bind(this));
       html.find(".skill-item").click(this._toggleSkillUp.bind(this));
+      html.find(".add-wound").click(this._modifyWoundsOnClick.bind(this()));
+      html.find(".remove-wound").click(this._modifyWoundsOnClick.bind(this()));
       html.find(".wounds-icons").on("click contextmenu", this._onWoundsMarkChange.bind(this));
       html.find(".select-trait").on("click contextmenu", this._onClickTrait.bind(this));
 
@@ -437,6 +439,12 @@ export default class CD10BaseSheet extends ActorSheet {
     } else {
       this.actor.modifyWounds(-1);
     }
+  }
+
+  _modifyWoundsOnClick(event) {
+    // FIXME: This needs to be finished. Detect if it's increase or decrease and act accordingly.
+    event.preventDefault();
+    console.log(event);
   }
 
   /**
