@@ -1,12 +1,14 @@
 #Version 0.4.4.5
 Big rewrite of most js-files, including CD10Dice.js.
 Massive CSS update. Foundry is now styled beyond CD10-specific sheets.
-Template updates. Weapons no longer have a block/parry value. Shields no longer have protection.
-Blocking mechanics simplified to current CD10 system (half lethality).
+// [ ] TODO: Template updates. Weapons no longer have a block/parry value. Shields no longer have protection.
+// [ ] TODO: Blocking mechanics simplified to current CD10 system (half lethality).
 Roll mechanics updated. 9's now provide a +4 on the check. Still explode.
 Roll evaluation updated. Now properly rolls a 0-9 D10 and handles 0's and 9's properly.
 Roll presentation updated. 9's and 0's are now presented in chat.
 Migration script for removing old template-data from actors added.
+// [ ] TODO: Make postable cards for weapons, armor and spells. Item context menus (right click) now include an option to post the description to chat, along with any skill-/traitvalue. 
+// [ ] TODO: Add + and - buttons to the health statblock, for mobile users.
 
 Both Mooksheets and Charactersheets now extend a BaseSheet class to simplify code and make maintenance less of a pain.
 
